--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
+    "framer-motion": "12.23.9",
+    "html2canvas": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
-    "framer-motion": "12.23.9"
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "autoprefixer": "^10.4.21",
     "loader-utils": "3.2.1",
-    "typescript": "5.7.2"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
